--- a/CodiJobServices/appsettings.json
+++ b/CodiJobServices/appsettings.json
@@ -1,10 +1,10 @@
 {
   "Data": {
     "CodiJob": {
-      "ConnectionString": "data source = 172.23.0.209; initial catalog = CodiJob; user id = sa; password = desarrollo2012"
+      "ConnectionString": "data source = Laptop; initial catalog = CodiJob; user id = 'eligeuno'; password = 'colocar-password"
     },
     "CodiJobIdentity": {
-      "ConnectionString": "data source = 172.23.0.209; initial catalog = CodiJobIdentityMB; user id = sa; password = desarrollo2012"
+      "ConnectionString": "data source = Laptop; initial catalog = CodiJobIdentityMB; user id = usuario; password = contraseña"
     }
   }
 }
